--- a/src/editor.scss
+++ b/src/editor.scss
@@ -1,35 +1,16 @@
 /**
  * Editor styles for backend
  */
-.block-editor-block-list__block[data-type="pronamic/read-more"] {
+.block-editor-block-list__block[data-type="pronamic/slider"] {
 	max-width: 100%;
 }
 
-.pronamic-block-read-more {
+.pronamic-block-slider {
 	border: 3px dashed #ccd0d4;
+	padding: 30px;
+}
 
-	.pronamic-block-read-more__controls {
-		margin: 0;
-		text-align: center;
-		text-transform: uppercase;
-		position: relative;
-		height: 38px;
-		margin-top: -19px;
-
-		> a {
-			background: #fff;
-			color: #6c7781;
-			display: inline-block;
-			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-			font-size: 13px;
-			font-weight: 600;
-			padding: 5px 20px;
-			text-decoration: none;
-		}
-	}
-
-	.pronamic-block-read-more__content {
-		display: block !important;
-		padding: 0 30px;
-	}
+.pronamic-block-slide {
+	border: 3px dashed #ccd0d4;
+	padding: 30px;
 }
