--- a/src/style.scss
+++ b/src/style.scss
@@ -1,23 +1,138 @@
 /**
  * Editor styles for frontend and backend
  */
-.pronamic-block-read-more {
-	display: flex;
-	flex-wrap: wrap;
+.pronamic-block-slider {
+	display: block;
+}
+
+// Slider
+.slick-slider {
+	&.slick-dotted {
+		padding-bottom: 12px;
+	}
+}
+
+// Slide
+.slick-slide {
+	* {
+		outline: none;
+	}
+}
+
+// Navigation
+.slick-prev,
+.slick-next {
+	background: red;
+	border: #ddd;
+	border-radius: 100%;
+	color: transparent;
+	cursor: pointer;
+	display: block;
+	font-size: 20px;
+	line-height: 38px;
+	margin: 0;
+	padding: 0;
+	outline: none;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 40px;
+	height: 40px;
+	z-index: 1;
+
+	&::before {
+		opacity: .25;
+		transition: .2s linear;
+	}
+
+	&:hover,
+	&:focus {
+		outline: none;
+
+		&::before {
+			opacity: 1;
+		}
+	}
+
+	&.slick-disabled {
+		&::before {
+			opacity: .25;
+		}
+	}
+}
+
+.slick-prev {
+	left: 20px;
+}
+
+.slick-next {
+	right: 20px;
+}
+
+// Dots
+.slick-dots {
+	display: flex !important;
+	justify-content: center;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	bottom: 0;
+	text-align: center;
 	width: 100%;
 
-	.pronamic-block-read-more__controls {
-		width: 100%;
-	}
+	li {
+		cursor: pointer;
+		display: inline-block;
+		margin: 0 10px;
+		padding: 0;
+		position: relative;
+		width: 12px;
+		height: 12px;
 
-	.pronamic-block-read-more__content {
-		display: none;
-		width: 100%;
-	}
-
-	&.is-open {
-		.pronamic-block-read-more__content {
+		button {
+			background: transparent;
+			border: 0;
+			color: transparent;
+			cursor: pointer;
 			display: block;
+			font-size: 0;
+			line-height: 0;
+			margin: 0;
+			padding: 0;
+			outline: none;
+			width: 12px;
+			height: 12px;
+
+			&::before {
+				background: red;
+				border-radius: 100%;
+				content: '';
+				opacity: .25;
+				position: absolute;
+				top: 0;
+				left: 0;
+				transition: .2s linear;
+				width: 12px;
+				height: 12px;
+			}
+
+			&:hover,
+			&:focus {
+				outline: none;
+
+				&::before {
+					opacity: 1;
+				}
+			}
+		}
+
+		&.slick-active {
+			button {
+				&::before {
+					opacity: 1;
+				}
+			}
 		}
 	}
 }
