--- a/src/editor.scss
+++ b/src/editor.scss
@@ -8,9 +8,9 @@
 .pronamic-block-slider {
 	border: 3px dashed #ccd0d4;
 	padding: 30px;
-}
 
-.pronamic-block-slide {
-	border: 3px dashed #ccd0d4;
-	padding: 30px;
+	.pronamic-block-slider_slide {
+		border: 3px dashed #ccd0d4;
+		padding: 30px;
+	}
 }
