--- a/src/style.scss
+++ b/src/style.scss
@@ -1,171 +1,21 @@
-/**
- * Editor styles for frontend and backend
- */
-.pronamic-block-slider {
-	display: block;
-	margin-right: -15px;
-	margin-left: -15px;
-
-	.pronamic-block-slider_slide {
-		padding-right: 15px;
-		padding-left: 15px;
-	}
-
-	&.pronamic-block-slider--inside {
-		.slick-prev {
-			left: 35px;
-		}
-
-		.slick-next {
-			right: 35px;
-		}
-
-		&.slick-dotted {
-			padding-bottom: 0;
-
-			.slick-dots {
-				bottom: 20px;
-			}
-		}
-	}
-}
-
-// Slider
-.slick-slider {
-	&.slick-dotted {
-		padding-bottom: 27px;
-	}
-}
-
-// Slide
-.slick-slide {
-	* {
-		outline: none;
-	}
-}
-
-// Navigation
-.slick-prev,
-.slick-next {
-	background: #000;
-	border-radius: 100%;
-	color: transparent;
-	cursor: pointer;
-	display: block;
-	font-size: 20px;
-	line-height: 38px;
-	margin: 0;
-	padding: 0;
-	outline: none;
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	width: 40px;
-	height: 40px;
-	z-index: 1;
-
-	&::before {
-		color: #fff;
-		display: block;
-		text-align: center;
-	}
-
-	&:hover,
-	&:focus {
-		outline: none;
-
-		&::before {
-			opacity: 1;
-		}
-	}
-
-	&.slick-disabled {
-		&::before {
-			opacity: .25;
-		}
-	}
-}
-
-.slick-prev {
-	left: -45px;
-
-	&::before {
-		content: '‹';
-	}
-}
-
-.slick-next {
-	right: -45px;
-
-	&::before {
-		content: '›';
-	}
-}
-
-// Dots
-.slick-dots {
-	display: flex !important;
-	justify-content: center;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	position: absolute;
-	bottom: 0;
-	text-align: center;
-	width: 100%;
-
-	li {
-		cursor: pointer;
-		display: inline-block;
-		margin: 0 10px;
-		padding: 0;
+.slider-class {
+	.wp-block-post-template {
 		position: relative;
-		width: 12px;
-		height: 12px;
+		width: 100%;
+		height: 100%;
+		z-index: 1;
+		display: flex;
+		overflow: hidden;
+		transition-property: transform;
+		box-sizing: content-box;
 
-		button {
-			background: transparent;
-			border: 0;
-			color: transparent;
-			cursor: pointer;
+		.wp-block-post {
+			flex-shrink: 0;
+			width: 100%;
+			height: 100%;
+			position: relative;
+			transition-property: transform;
 			display: block;
-			font-size: 0;
-			line-height: 0;
-			margin: 0;
-			padding: 0;
-			outline: none;
-			width: 12px;
-			height: 12px;
-
-			&::before {
-				background: #000;
-				border-radius: 100%;
-				content: '';
-				opacity: .25;
-				position: absolute;
-				top: 0;
-				left: 0;
-				transition: .2s linear;
-				width: 12px;
-				height: 12px;
-			}
-
-			&:hover,
-			&:focus {
-				outline: none;
-
-				&::before {
-					opacity: 1;
-				}
-			}
-		}
-
-		&.slick-active {
-			button {
-				&::before {
-					opacity: 1;
-				}
-			}
 		}
 	}
 }
