--- a/blocks-src/slider/editor.scss
+++ b/blocks-src/slider/editor.scss
@@ -9,7 +9,7 @@
 	border: 3px dashed #ccd0d4;
 	padding: 30px;
 
-	.pronamic-block-slider_slide {
+	.swiper-slide {
 		border: 3px dashed #ccd0d4;
 		padding: 30px;
 	}
