--- a/blocks-src/slider/editor.scss
+++ b/blocks-src/slider/editor.scss
@@ -1,11 +1,7 @@
 /**
  * Editor styles for backend
  */
-.block-editor-block-list__block[data-type="pronamic/slider"] {
-	max-width: 100%;
-}
-
-.pronamic-block-slider {
+.wp-block-pronamic-slider {
 	border: 3px dashed #ccd0d4;
 	padding: 30px;
 
