--- a/blocks/slider/index-rtl.css
+++ b/blocks/slider/index-rtl.css
@@ -1,1 +1,1 @@
-.wp-block-pronamic-slider,.wp-block-pronamic-slider .swiper-slide{border:3px dashed #ccd0d4;padding:30px}
+.wp-block-pronamic-slider,.wp-block-pronamic-slider .swiper-slide{border:2px dashed #ccd0d4;padding:.5em}
