--- a/blocks-src/slider/editor.scss
+++ b/blocks-src/slider/editor.scss
@@ -2,11 +2,11 @@
  * Editor styles for backend
  */
 .wp-block-pronamic-slider {
-	border: 3px dashed #ccd0d4;
-	padding: 30px;
+	border: 2px dashed #ccd0d4;
+	padding: .5em;
 
 	.swiper-slide {
-		border: 3px dashed #ccd0d4;
-		padding: 30px;
+		border: 2px dashed #ccd0d4;
+		padding: .5em;
 	}
 }
