--- a/src/view.scss
+++ b/src/view.scss
@@ -8,12 +8,10 @@
 	cursor: pointer;
 	display: flex;
 	justify-content: center;
+	transition: opacity .2s;
 	width: 40px;
 	height: 40px;
-}
 
-.wp-block-pronamic-slider-navigation-prev,
-.wp-block-pronamic-slider-navigation-next {
 	&::after {
 		background-color: rgba(0, 0, 0, 1);
 		content: '';
