--- a/src/view.scss
+++ b/src/view.scss
@@ -13,7 +13,7 @@
 	height: 40px;
 
 	&::after {
-		background-color: rgba(0, 0, 0, 1);
+		background-color: currentColor;
 		content: '';
 		mask-image: url('data:image/svg+xml,<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M16 22L6 12L16 2L17.775 3.775L9.55 12L17.775 20.225L16 22Z"/></svg>');
 		mask-size: cover;
